@@ -1,93 +1,96 @@
-[error] Buffer: Exception while sending buffer event to org.gjt.sp.jedit.textarea.DisplayManager$BufferChangeHandler@3e7799 :
-[error] Buffer: java.lang.ArrayIndexOutOfBoundsException: Array index out of range: 206
-[error] Buffer:  at org.gjt.sp.jedit.textarea.DisplayManager.getPrevVisibleLine(DisplayManager.java:189)
-[error] Buffer:  at org.gjt.sp.jedit.textarea.DisplayManager.hideLineRange(DisplayManager.java:1064)
-[error] Buffer:  at org.gjt.sp.jedit.textarea.DisplayManager.expandFolds(DisplayManager.java:488)
-[error] Buffer:  at org.gjt.sp.jedit.textarea.DisplayManager$BufferChangeHandler.bufferLoaded(DisplayManager.java:1547)
-[error] Buffer:  at org.gjt.sp.jedit.Buffer.fireBufferLoaded(Buffer.java:4320)
-[error] Buffer:  at org.gjt.sp.jedit.Buffer.access$1100(Buffer.java:71)
-[error] Buffer:  at org.gjt.sp.jedit.Buffer$1.run(Buffer.java:309)
-
-
 TO DO
 
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-4.3pre2:
++ text area:
 
-- double-clicking middle mouse button
-- split view; last physical line invalid or something?
-- 7000 line lisp file: window resize is slow
-- using up/down arrows with a blank text field and pressing / goes to
-  the root
-- there is a comment in browser.actions.xml:
-/* NOTE: I do NOT want plugins creating check box menu items
- * in jEdit 4.2! The API is not stable, note the _comp hack...
- * in 4.3 I will finish the full action API refactoring and
- * IS_SELECTED blocks in browser actions will have access to
- * the browser variable just like the CODE block above.
- *
- * Love, Slava */
-- auto indent:
+  - expand fold: try to expand even if already expanded
+  - backspace with virtual caret: needs tweaks
+  - independent text area component
+    - gutter: has a depenency on View to do focus highlight, and Marker
+    - display manager: has a dependency on View for currently focused
+    - text area: depends on view for input handling,
+      smart home/end macro record, showing dialog boxes, abbrevs
+    - mouse handler: registers
+    - text area transfer handler: opening files dependency
+  - new file: explicit folding: type {{{: fold marker doesn't appear
+  - finish code to hide caret on user input; enter is a problem
+    maybe listen for KeyTyped instead
+  - indent folding: fold marker not always updated
+  - format: preserve comment chars at start
+  - tabs to spaces with rect select
+  - single line selection should not hide line highlight
+  - input methods
+  - remove-marker, select-next/prev-marker/bracket
+  - C+b -- click -- keys don't work
+  - complete word not wide enough
+  - format -- instead of \n\n, what if it has \n   \n?
+  - DnD still dosn't work as expected when draging from the same buffer,
+  but differen text area (for example droping at the position where drag
+  was started erases text)- no support for vertical pasting
+  - anoying cursor blinking (responsible for this is scrolling option :
+  textArea.moveCaretPosition(pos,JEditTextArea.ELECTRIC_SCROLL) in
+  dragOver() method)
+
++ auto indent:
+
   - deep indent
   - Common Lisp &body forms
   - pressing enter: carry over * from prev line in javadoc
   - javadoc indent: if prev line was /* or *, unindent if prev line is
   */
-- option to disable buffer local properties
-- option to disable electric keys
-- more configurable file system browser
-  - at least, preserve column widths
-- CA+PLUS +: bad
-- C+b -- click -- keys don't work
-- remove-marker, select-next/prev-marker/bracket
-- expand fold: try to expand even if already expanded
-- don't show 'new directory' in favorites:
-
-+ 4.3 drivers:
-
-- bsh bugs:
-  ; after else if()
-  longs not read correctly if prefixed with 0x
-- auto indent:
   if(foo)
     while(bar)
     {
       //
     }
   <--- cursor here
-- backspace with virtual caret: needs tweaks
-- new file: explicit folding: type {{{: fold marker doesn't appear
-- finish code to hide caret on user input; enter is a problem
-  maybe listen for KeyTyped instead
-- independent text area component
-  - gutter: has a depenency on View to do focus highlight, and Marker
-  - display manager: has a dependency on View for currently focused
-  - text area: depends on view for input handling,
-    smart home/end macro record, showing dialog boxes, abbrevs
-  - mouse handler: registers
-  - text area transfer handler: opening files dependency
-- save help index
-- indent folding: fold marker not always updated
-- format: preserve comment chars at start
-- token values negative?
-- single line selection should not hide line highlight
-- jedit -encoding
-- goToBuffer() -- if any parent has zero height or zero width...
-- save selection between buffer switch
-- more accurate syntax highlighting
-- input methods
-- draganddrop patch
-- ditch aelfred
-- deferred loading API for macro handlers
-- autosave directory option
-- S+INS, etc in swing controls
-- vfs: a way of running awt requests not all at end
-- wrapped dock buttons broken
+  - option to disable electric keys
+
++ vfs browser:
+
+  - using up/down arrows with a blank text field and pressing / goes to
+    the root
+  - only traverse hierarchy on TAB, do nothing special on backsapce
+  - more configurable file system browser
+    - at least, preserve column widths
+  - test keyboard completion with expanded/collapsed tree
+  - test keyboard completion with high latency VFS
+  - fsb default size
+  - don't show 'new directory' in favorites:
+  
++ misc:
+
+  - jEdit.checkBufferStatus() fucks with split panes
+  
+  - there is a comment in browser.actions.xml:
+  /* NOTE: I do NOT want plugins creating check box menu items
+   * in jEdit 4.2! The API is not stable, note the _comp hack...
+   * in 4.3 I will finish the full action API refactoring and
+   * IS_SELECTED blocks in browser actions will have access to
+   * the browser variable just like the CODE block above.
+   *
+   * Love, Slava */
+
+  - option to disable buffer local properties
+  - CA+PLUS +: bad
+  - jedit -encoding
+  - goToBuffer() -- if any parent has zero height or zero width...
+  - save selection between buffer switch
+  - deferred loading API for macro handlers
+  - S+INS, etc in swing controls
+  - vfs: a way of running awt requests not all at end
+  - wrapped dock buttons broken
+
++ beanshell:
+
+  ; after else if()
+  longs not read correctly if prefixed with 0x
 
 + docs:
 
+- save help index
 - document optional dependencies
 - deferred loading mention.
 - addCommandPath()
@@ -130,17 +133,6 @@ and quirks that I need to fix eventually.
   - status bar messages & readNextChar()
 - vfs javadoc: invokeAndWait() example for createVFSSession()
 
-[error] ExtensionManager: java.lang.NullPointerException
-[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.StructureMatcher$Highlight.getOffsets(StructureMatcher.java:181)
-[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.StructureMatcher$Highlight.paintHighlight(StructureMatcher.java:207)
-[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.StructureMatcher$Highlight.paintValidLine(StructureMatcher.java:147)
-[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.TextAreaExtension.paintScreenLineRange(TextAreaExtension.java:70)
-[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.ExtensionManager.paintScreenLineRange(ExtensionManager.java:146)
-[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.ExtensionManager.paintScreenLineRange(ExtensionManager.java:106)
-[error] ExtensionManager:  at org.gjt.sp.jedit.textarea.TextAreaPainter.paintComponent(TextAreaPainter.java:699)
-
-- tabs to spaces with rect select
-- more flexible mirror list
 
 check tips of the day
 - help:
@@ -157,26 +149,13 @@ check tips of the day
 [error] WorkThread:  at org.gjt.sp.util.WorkThread.doRequests(WorkThread.java:161)
 [error] WorkThread:  at org.gjt.sp.util.WorkThread.run(WorkThread.java:135)
 
-- drag and drop, not at caret position?
-- sidekick out of memory error!
 [error] ChunkCache: BUG: skew=1,out.size()=0
 [error] ChunkCache: BUG: skew=1,out.size()=1
 
-- DnD still dosn't work as expected when draging from the same buffer,
-but differen text area (for example droping at the position where drag
-was started erases text)- no support for vertical pasting
-- anoying cursor blinking (responsible for this is scrolling option :
-textArea.moveCaretPosition(pos,JEditTextArea.ELECTRIC_SCROLL) in
-dragOver() method)
 - C+d & killring
-- jEdit.checkBufferStatus() fucks with split panes
-- complete word not wide enough
-- test keyboard completion with expanded/collapsed tree
-- test keyboard completion with high latency VFS
 - plugin mgr inspection of not-loaded plugins
 - history text field tweak
 - printing: check default printer setting
-- fsb default size
 
 + obscure:
 
@@ -185,16 +164,15 @@ dragOver() method)
 - motif l&f: shortcuts in menu items
 - some JLists do not auto-scroll on keystroke
 - how to handle S+0-9?
-- clean up VFSManager.errorOccurred() -vs- BufferIORequest.ERROR_OCCURRED
 - invoking action bar command twice
 - backup time distance setting
 - if A depends on B but A is loaded before B and B breaks, A ends up
   being loaded. Solution: load plugins in order of dependencies?
-- format -- instead of \n\n, what if it has \n   \n?
 - C+ENTER 3 C+2
 
 + performance:
 
+- 7000 line lisp file: window resize is slow
 - closing lots of files is slow -- esp. with close all dialog box!
 - menu drag: slow
 - bracket matching: no delay for current line match??
